--- a/RepData_PA2.Rmd
+++ b/RepData_PA2.Rmd
@@ -46,26 +46,29 @@ csc = sapply(csvSample, class)
 ##  "numeric"
 
 ## http://stackoverflow.com/questions/13022299/specify-date-format-for-colclasses-argument-in-read-table-read-csv
-## setAs("character","myDate", function(from) as.Date(from, format="%d/%m/%Y") )
+setClass('myDate')
+setAs("character","myDate", function(from) as.Date(from, format="%m/%d/%Y") )
 ## tmp <- c("1, 15/08/2008", "2, 23/05/2010")
 ## con <- textConnection(tmp)
 ## tmp2 <- read.csv(con, colClasses=c('numeric','myDate'), header=FALSE)
 ## str(tmp2)
 
-csc = c("NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", 
-        "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", 
-        "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL",
+csc = c("NULL", "myDate", "NULL", "NULL", "numeric", "factor",
+        "factor", "factor", "NULL", "NULL", "NULL", "NULL",
+        "NULL", "NULL", "NULL", "NULL", "NULL", "NULL",
+        "NULL", "NULL", "NULL", "NULL", "NULL", "NULL",
+        "NULL", "NULL", "NULL", "NULL", "NULL", "NULL",
         "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL")
 
 
 # one strategy is to disregard events before 2000 when the classification method changed.
 
 raw_csv <- read.csv("repdata_data_StormData.csv", header = TRUE, colClasses = csc,
-                    nrows = 1000)
+                    nrows = 10000)
 
 
-# classes <- sapply(raw_csv, class)
-# classes
+ classes <- sapply(raw_csv, class)
+ classes
 
 ## automatically generated classes, not ideal for most. Use "NULL" to skip a column.
 ##    STATE__   BGN_DATE   BGN_TIME  TIME_ZONE     COUNTY COUNTYNAME 
